# gemini-mcp-rs

./: .gitignore  AGENTS.md  CLAUDE.md  CODE_QUALITY_REVIEW.md  Cargo.toml  GEMINI.md  LICENSE-COMMERCIAL  Makefile  README-zh_CN.md  README.md  server.json
.github/workflows/: ci.yml  release.yml
npm/: README.md  install.js  package.json  run.js
npm/gemini-mcp-rs/: README.md  package.json  run.js
scripts/: build-macOS-universal-binary.sh  check-version.sh  install.sh
src/: gemini.rs  lib.rs  main.rs  server.rs
tests/: integration_tests.rs
