[package]
name = "gemini-mcp-rs"
version = "0.1.2"
edition = "2021"
authors = ["missdeer"]
description = "MCP server wrapping the Gemini CLI in Rust"
license = "MIT"
repository = "https://github.com/missdeer/gemini-mcp-rs"

[dependencies]
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", branch = "main", features = ["server", "transport-io"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["full"] }
anyhow = "1.0"
clap = { version = "4.5.53", default-features = false, features = ["std", "derive", "help", "usage", "error-context", "wrap_help", "suggestions", "cargo"] }

[dev-dependencies]
tempfile = "3.13"
