[package]
name = "gemini-mcp-rs"
version = "0.1.3"
edition = "2021"
rust-version = "1.77.2"
authors = ["missdeer"]
description = "MCP server wrapping the Gemini CLI in Rust"
license = "MIT"
repository = "https://github.com/missdeer/gemini-mcp-rs"

[dependencies]
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", branch = "main", features = ["server", "transport-io", "transport-async-rw"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
thiserror = "2"
anyhow = "1.0"
clap = { version = "4.5.53", default-features = false, features = ["std", "derive", "help", "usage", "error-context", "wrap_help", "suggestions", "cargo"] }
